--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/dominio/TestLinkedlist.java=UTF-8
+encoding//src/dominio/TestPQueue.java=UTF-8
 encoding//src/dominio/seconderiv.java=UTF-8
